k8s-resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: k8s-challenge
  name: k8s-challenge
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 4000
  selector:
    app: k8s-challenge
  type: NodePort
status:
  loadBalancer: {}
