k8s-resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-challenge
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: k8s-minikube-host.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-challenge
                port:
                  number: 80
